--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
     </build>
 
     <dependencies>
+    	<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
