--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
     </build>
 
     <dependencies>
+	    <dependency>
+	      <groupId>com.github.luben</groupId>
+	      <artifactId>zstd-jni</artifactId>
+	      <version>1.3.2-2</version>
+	    </dependency>
     	<dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
