--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
             <artifactId>murmur</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+		  	<groupId>org.apache.logging.log4j</groupId>
+		  	<artifactId>log4j-api</artifactId>
+		  	<version>2.11.1</version>
+		</dependency>
+		<dependency>
+		  	<groupId>org.apache.logging.log4j</groupId>
+		  	<artifactId>log4j-core</artifactId>
+		  	<version>2.11.1</version>
+		</dependency>
     </dependencies>
 
 </project>
